# thermoxels

./: .amlignore  .flake8  .gitignore  README.md  pyproject.toml  thermoxels.bib
.github/workflow/: python.yml
.github/workflows/: python.yml
build-context/: Dockerfile  README.md
dockerfile/: Dockerfile  requirements.txt
docs/CISBAT2025/: CISBAT2025.html  CISBAT2025.qmd  custom-for-presentation.csl  custom.css  empty.csv  mae.csv  psnr.csv  references.bib  ssim.csv
docs/CISBAT2025/_extensions/schindler/: _extension.yml  custom.scss
docs/CISBAT2025/images/: progress.fdb_latexmk  progress.fls  progress.tex
hot_cubes/: colmap_json_to_txt.py  svox2_temperature.py
hot_cubes/cli/: train_thermoxel_model.py
hot_cubes/configs/: thermoscene_rgb.json
hot_cubes/datasets/: colmap_json_to_txt.py  thermal_util.py  thermo_scene_dataset.py
hot_cubes/datasets/datasets_utils/: README.md  colmap_json_to_txt.py  rename_files.py
hot_cubes/grid_export/: generate_gif_of_mesh.py  grid_to_stl.py  npy_to_mesh.py
hot_cubes/model/: thermoxel_trainer.py  training_param.py
hot_cubes/renderer_evaluator/: model_evaluator.py  render_param.py  thermal_evaluation_metrics.py
hot_cubes/utils/: thermo_scene_dataset.py
plenoxels/opt/util/: config_util.py  dataset.py  dataset_base.py  llff_dataset.py  nsvf_dataset.py
plenoxels/svox2/csrc/: svox2.cpp
plenoxels/svox2/csrc/include/: data_spec_packed.cuh
plenoxels/svox2/csrc_thermoxels/: loss_kernel.cu  render_lerp_kernel_cuvol.cu  svox2_kernel.cu
plenoxels/svox2/csrc_thermoxels/include/: data_spec.hpp  render_util.cuh
scripts/azure/: autotune_plenoxel_on_azure.py  eval_plenoxel_on_azure.py  run_simple_volumetric_simulation_on_azure.py  train_multi_config_plenoxel_on_azure.py  train_plenoxel_on_azure.py  train_thermoxel.py  train_thermoxel_all.py
tests/: test_dataset_thermal_utils.py  test_placeholder.py
tests/colmap_to_json_test/: test_colmap_to_json.py
tests/colmap_to_json_test/mock_dataset/: transforms_thermal.json
tests/colmap_to_json_test/mock_dataset_copy/: intrinsics.txt
tests/colmap_to_json_test/mock_dataset_copy/pose/: 1.txt  e1.txt
tests/mock_dataset/: transforms_thermal.json
tests/mock_dataset/pose/: frame_train_00001.txt
tests/test_metrics/: test_hssim.py
tests/test_render/: test_evaluator_metrics.py
tests/test_thermoscene_data_structure/: test_thermal_rays.py  test_thermoscene.py
tests/test_thermoscene_data_structure/mock_dataset/: intrinsics.txt  temperature_bounds.json
tests/test_thermoscene_data_structure/mock_dataset/pose/: frame_eval_00001.txt
thermoxels/: svox2_temperature.py
thermoxels/cli/: train_thermoxel_model.py
thermoxels/datasets/: thermo_scene_dataset.py
thermoxels/datasets/datasets_utils/: README.md  colmap_json_to_txt.py  rescale_thermal_images.py
thermoxels/grid_export/: generate_gif_of_mesh.py  manual_viewer.py  npy_to_mesh.py
thermoxels/model/: thermoxel_trainer.py
thermoxels/renderer_evaluator/: model_evaluator.py  thermal_evaluation_metrics.py
thermoxels_fem/: thermal_problem.py  thermoxel_to_volumetric_simple.py  volumetric_simple_regions_simulation.py
thermoxels_fem/cli/: run_thermal_simple_regions_simulation_from_ckpt.py
