[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.1"
name = "thermal-voxel"
description = 'thermal-voxel'
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = []
dependencies = ["tyro >= 0.8.8", "meshio >= 5.3.5", "pyvista >= 0.44.1"]

[project.optional-dependencies]
azure = ["azure-ml-utils"]

[tool.hatch.build.targets.wheel]
packages = ["plenoxels"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
exclude = '''
/(
   plenoxels/
)/
'''
